<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/shape"
    tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Refuel_View"
            android:id="@+id/tvRefuelViewTitle"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tv_Refuel_Date"
            android:id="@+id/tvRefuelViewDateText"
            android:layout_gravity="left|center_vertical"/>

    <TextView
            android:id="@+id/tvRefuelViewDate"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tv_Refuel_Type"
            android:id="@+id/tvRefuelViewTypeText"
            android:layout_gravity="left|center_vertical"/>

    <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tvRefuelViewType"
            android:layout_gravity="center"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tv_Refuel_Quantity"
            android:id="@+id/tvRefuelViewQuantityText"
            android:layout_gravity="left|center_vertical"/>

    <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:ems="10"
            android:id="@+id/tvRefuelViewQuantity"
            android:layout_gravity="center"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tv_Refuel_Pay"
            android:id="@+id/tvRefuelViewPayText"
            android:layout_gravity="left|center_vertical"/>

    <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:ems="10"
            android:id="@+id/tvRefuelViewPay"
            android:layout_gravity="center"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tv_Refuel_Odometer"
            android:id="@+id/tvRefuelViewOdometerText"
            android:layout_gravity="left|center_vertical"/>

    <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:ems="10"
            android:id="@+id/tvRefuelViewOdometer"
            android:layout_gravity="center"/>

</LinearLayout>
